<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="average_text">Avg</string>
    <string name="menu_item_high_light_scale_factor">0.5</string>
    <string name="picker_default_positive_text">Confirm</string>
    <string name="picker_default_nagetive_text">Off</string>
    <string name="no_heartrate_data_hint">Heart rate data not detected</string>
    <string name="no_altitude_hint">Altitude data not detected</string>
    <string name="ui_lib_name">Hm_UILib</string>
    <string name="title_settings">Settings</string>
    <string name="sport_music_settings">Sports music</string>
    <string name="settings_item_high_light_scale_factor">0.5</string>
    <string name="locale_title">Select Language</string>
    <string name="music_name">Watercress FM</string>
    <string name="music_download" formatted="false">%1d/%2d</string>
    <string name="music_download_in_progress">Song downloading...</string>
    <string name="music_no_wifi_title">Unable to download</string>
    <string name="music_download_fail_title">Song downloading failed</string>
    <string name="music_download_not_complete_title">Songs not completely downloaded</string>
    <string name="music_no_wifi_content">Wi-Fi is not connected, songs cannot be downloaded. Please connect to Wi-Fi by System settings - Wi-Fi on the watch.</string>
    <string name="music_download_fail_content">Network connection error. Songs unable to be downloaded. Please connect to the network and try again.</string>
    <string name="music_download_not_complete_content">Network connecting error, songs unable to finish downloading. Only play currently downloaded songs. (All songs will be downloaded automatically with Wi-Fi connection)</string>
    <string name="music_download_success">Song update successful</string>
    <string name="music_downloading">Downloading</string>
    <string name="music_fetch_list">Obtaining song list...</string>
    <string name="music_downloading_noting">-/-</string>
    <string name="check_network">Check the network</string>
    <string name="music_continue_downloading">Songs will continue to be downloaded</string>
    <string name="music_service_unavalible">DouBan service is Unavailable</string>
    <string name="downloading_title">Downloading</string>
    <string name="downloaded_title">Downloaded</string>
    <string name="pause_all_download_task">All paused</string>
    <string name="start_all_download_task">Continue download</string>
    <string name="delete_all_download_task">Delete download</string>
    <string name="delete_all_task_toast">Really stop download？</string>
    <string name="download_completed">Download completed</string>
    <string name="waiting_download">Waiting/</string>
    <string name="music_list_title">Playback settings</string>
    <string name="music_volumn_control">Volume</string>
    <string name="music_douban_offline">Watercress FM offline</string>
    <string name="music_play_mode">Change mode</string>
    <string name="music_play_source">Change music library</string>
    <string name="music_downloaded">Downloaded</string>
    <string name="music_source_douban">Watercress FM</string>
    <string name="music_source_local">Local songs</string>
    <string name="music_source_all">All songs</string>
    <string name="music_source_ximalaya">Ximalaya</string>
    <string name="player_banner">Xiamalaya FM</string>
    <string name="music_title">Music</string>
    <string name="music_init_not_done">The music is initializing ...</string>
    <string name="music_broken">play failed, try re-download.</string>
    <string name="music_no_resource">No songs available</string>
    <string name="music_no_resource_detail">Please download the "Amazfit Watch App - Application Settings - Himalayan FM".</string>
    <string name="music_down_not_complete_title">The song list has not been fully downloaded, exit?</string>
    <string name="music_no_douban_resource">No local songs available to play, download now?</string>
    <string name="music_no_local_resource">No songs to play, please connect USB to import.</string>
    <string name="music_start_tips">Need to connect to a Bluetooth headset for music, connect now?</string>
    <string name="music_down_not_complete_content">After logging out, songs can be updated in the Music settings - Watercress FM offline.</string>
    <string name="sound_title">Song title</string>
    <string name="announcer">Announcer</string>
    <string name="remain_duration">-28:00</string>
    <string name="play_mode_single_loop">No repeat</string>
    <string name="play_mode_ordered">Play sequence</string>
    <string name="play_mode_random">Random play</string>
    <string name="play_mode_album_loop">Repeat album</string>
    <string name="app_name">XimalayaSound</string>
    <string name="hello">Hello</string>
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_genre_subtitle">Songs by genre</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="home_title">Home</string>
    <string name="related_content_header">You may also like</string>
    <string name="action_listen">Listen</string>
    <string name="open_content_drawer">Open the main menu</string>
    <string name="close_content_drawer">Close the main menu</string>
    <string name="placeholder_message">This is a placeholder for your application code.</string>
    <string name="drawer_allmusic_title">All Music</string>
    <string name="drawer_playlists_title">Playlists</string>
    <string name="now_playing">Now Playing</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="search_queue_title">Search results</string>
    <string name="no_search_results">No search results.</string>
    <string name="loading">Loading…</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="confirm_exit">The playlist is downloading, stop it?</string>
    <string name="music_download_cancel">Song downloading has been stopped</string>
    <string name="storage_space_g">Storage %sG</string>
    <string name="storage_space_mb">Storage %sMB</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="stop_casting">Stop Casting</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_previous">Previous</string>
    <string name="label_next">Next</string>
<!--START of missed texts by Huami-->
    <string name="widget_currentstep_title">Data Center</string>
    <string name="widget_currentstep_activities">Steps today</string>
    <string name="widget_currentstep_sleep_hour">h</string>
    <string name="widget_currentstep_sleep_min">min</string>
    <string name="widget_currentstep_sleep_title">Sleep last night</string>
    <string name="widget_currentstep_sleep_no">No sleep data</string>
    <string name="widget_currentstep_activity_no">No exercise today?</string>
<!--END of missed texts by Huami-->
</resources>
