<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="@dimen/playback_controls_padding" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/album_art" android:layout_width="@dimen/playback_controls_albumart_size" android:layout_height="@dimen/playback_controls_albumart_size" android:scaleType="centerCrop" android:contentDescription="@string/currently_playing_song" android:layout_alignParentStart="true" />
    <LinearLayout android:orientation="vertical" android:id="@id/content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="@dimen/playback_controls_albumart_horizontal_margin" android:layout_toStartOf="@id/play_pause" android:layout_toEndOf="@id/album_art">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="?android:textColorPrimary" android:ellipsize="end" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:contentDescription="@string/currently_playing_song" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:ellipsize="end" android:id="@id/artist" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:contentDescription="@string/currently_playing_artist" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:ellipsize="end" android:id="@id/extra_info" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:contentDescription="@string/currently_playing_extra_info" />
    </LinearLayout>
    <ImageButton android:id="@id/next" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_skip_next_white_48dp" android:tint="@color/bt_accent" android:layout_centerVertical="true" android:contentDescription="@string/play_pause" android:layout_alignParentEnd="true" android:tintMode="src_in" />
    <ImageButton android:id="@id/play_pause" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_play_arrow_black_36dp" android:tint="@color/bt_accent" android:layout_centerVertical="true" android:contentDescription="@string/play_pause" android:layout_toStartOf="@id/next" android:tintMode="src_in" />
</RelativeLayout>