<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="19.0sp" android:gravity="center_horizontal" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/downloading_title" />
    <TextView android:textSize="12.0sp" android:textColor="#b3ffffff" android:gravity="center_horizontal" android:id="@id/watch_storage_space" android:paddingTop="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <RelativeLayout android:background="@android:color/black" android:paddingTop="11.0dip" android:paddingBottom="13.0dip" android:layout_width="fill_parent" android:layout_height="52.0dip">
        <View android:id="@id/center_anchor" android:background="#66ffffff" android:layout_width="2.0px" android:layout_height="12.699982dip" android:layout_centerInParent="true" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/center_anchor" android:layout_centerInParent="true">
            <TextView android:textSize="12.0sp" android:gravity="center_vertical" android:id="@id/pause_start_all_task" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pause_all_download_task" android:drawableLeft="@drawable/xmly_details_list_btn_all_stop" android:drawablePadding="5.0dip" android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/center_anchor" android:layout_centerInParent="true">
            <TextView android:textSize="12.0sp" android:gravity="center_vertical" android:id="@id/delete_all_task" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/delete_all_download_task" android:drawableLeft="@drawable/xmly_details_list_btn_all_delete" android:drawablePadding="5.0dip" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>