<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/play_source_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_centerHorizontal="true">
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/xmly_weight_logo_54" />
        <TextView android:textSize="14.0sp" android:layout_gravity="center" android:id="@id/play_source" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.6999817dip" android:text="@string/player_banner" />
        <TextView android:textSize="16.0sp" android:id="@id/play_no_resource_help" android:paddingLeft="20.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.6999817dip" android:text="@string/music_no_resource_detail" />
    </LinearLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="5.0dip">
        <ImageView android:id="@id/play_backgroud" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/xmly_weight_play_bg" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
        <LinearLayout android:orientation="horizontal" android:id="@id/play_banner_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_centerHorizontal="true">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/xmly_weight_logo_32" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/player_banner" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/play_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="27.0dip" android:layout_alignParentBottom="true">
            <RelativeLayout android:gravity="bottom" android:id="@id/pre_btn_container" android:paddingLeft="8.0dip" android:paddingBottom="8.0dip" android:layout_width="80.0dip" android:layout_height="55.0dip" android:layout_marginRight="20.0dip">
                <ImageView android:id="@id/pre_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/xmly_weight_btn_prev" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <ImageView android:layout_gravity="top" android:id="@id/play_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/xmly_weight_btn_play" />
            <RelativeLayout android:gravity="bottom" android:id="@id/next_btn_container" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="80.0dip" android:layout_height="55.0dip" android:layout_marginLeft="20.0dip">
                <ImageView android:id="@id/next_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/xmly_weight_btn_next" android:layout_alignParentLeft="true" />
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout android:gravity="center_horizontal" android:id="@id/song_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_above="@id/play_container">
            <TextView android:textSize="16.0sp" android:textColor="@color/music_name_color" android:ellipsize="marquee" android:id="@id/music_name" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/sound_title" android:singleLine="true" android:layout_alignParentLeft="true" />
            <TextView android:textSize="14.0sp" android:ellipsize="marquee" android:id="@id/music_artist" android:paddingRight="40.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginBottom="3.0dip" android:text="@string/announcer" android:singleLine="true" android:layout_below="@id/music_name" android:layout_alignParentLeft="true" />
            <TextView android:textSize="14.0sp" android:id="@id/music_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/remain_duration" android:singleLine="true" android:layout_alignBottom="@id/music_artist" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <LinearLayout android:gravity="center_horizontal" android:id="@id/music_settings_container" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
            <ImageView android:id="@id/music_settings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/xmly_weight_btn_set" android:layout_centerHorizontal="true" />
        </LinearLayout>
    </RelativeLayout>
    <include android:id="@id/dialog_no_music_and_connect_ble_container" android:visibility="gone" layout="@layout/music_not_connect_ble_alert_dialog" />
    <include android:id="@id/dialog_not_complete_music_container" android:visibility="gone" layout="@layout/music_not_found_alert_dialog" />
</RelativeLayout>