<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:background="@android:color/black" android:paddingTop="12.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_horizontal" android:id="@id/download_update_container" android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <View android:id="@id/percent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="@dimen/music_size_arc_padding" />
        <ImageView android:id="@id/music_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:src="@drawable/sport_music_icon_douban_48" android:layout_centerHorizontal="true" />
        <TextView android:textSize="@dimen/music_size_name" android:textColor="@color/music_name_color" android:id="@id/music_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/music_name" android:layout_below="@id/music_icon" android:layout_centerHorizontal="true" android:fontFamily="SourceHanSansCN-Regular" />
        <TextView android:textSize="@dimen/music_size_download" android:textColor="@color/music_download_color" android:id="@id/music_download" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/music_download" android:layout_below="@id/music_name" android:layout_centerHorizontal="true" android:fontFamily="DINCondensed-Bold" />
        <TextView android:textSize="@dimen/music_size_download_in_progress" android:textColor="@color/music_download_color" android:id="@id/music_download_state" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/music_download" android:layout_centerHorizontal="true" android:fontFamily="SourceHanSansCN-Regular" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/err_container" android:background="@android:color/black" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip">
        <RelativeLayout android:id="@id/err_download_container" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/music_err_title_size" android:textColor="@color/music_download_color" android:id="@id/err_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" />
            <TextView android:textSize="@dimen/music_err_content_size" android:textColor="@color/music_download_color" android:gravity="center_horizontal" android:id="@id/err_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="26.699982dip" android:layout_marginTop="12.0dip" android:layout_marginRight="18.699982dip" android:layout_below="@id/err_title" android:layout_centerHorizontal="true" android:lineSpacingExtra="4.0dip" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/music_downloade_complete_content_size" android:textColor="@color/music_download_color" android:gravity="center_horizontal" android:id="@id/success_content" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="26.699982dip" android:layout_marginTop="46.0dip" android:layout_marginRight="18.699982dip" android:text="@string/music_download_success" android:layout_centerHorizontal="true" />
        <com.huami.watch.common.widget.HmHaloImageView android:id="@id/err_confirm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:layout_marginBottom="10.0dip" android:src="@drawable/music_confirm" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>